examples/test/testpolicy808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy808
  namespace: namespace246
spec:
  podSelector:
    matchLabels:
      key2: value8
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value27
          key39: value12
      podSelector:
        matchLabels:
          key11: value36
